objects/Lead_Status_History__c.object
<CustomObject>
    <description>Used to track all Lead status changes</description>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Lead Status Historys</relationshipLabel>
        <relationshipName>Lead_Status_Historys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>New_Status_Date__c</fullName>
        <label>New Status Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>New_Status__c</fullName>
        <label>New Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Status_Date__c</fullName>
        <label>Old Status Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Old_Status__c</fullName>
        <label>Old Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Duration__c</fullName>
        <formula>New_Status_Date__c -  Old_Status_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Lead Status History</label>
    <nameField>
        <displayFormat>LSH-{000000}</displayFormat>
        <label>Lead status history  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lead Status Historys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>